# P-DFS-Multihit-WSC

./: CMakeLists.txt  README.md
src/: multiHit.cpp
utils/: preprocessing_maf.py
